# palje

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  MANIFEST.in  README.md  azure-pipelines.yml  bitbucket-pipelines.yml  msi_build.py  pyproject.toml  setup.cfg  tox.ini
azure-pipelines/: ALMPassets-upload-template.yml  MPA-trigger-template.yml  azure-build-template.yml  azure-pytest-template.yml  azure-test-template.yml  azure-variables-template.yml  unit-test-template.yml
src/palje/: __init__.py  __main__.py  cli.py  cli2.py  confluence_rest.py  db_to_confluence.py  mssql_database.py  progress_tracker.py  storage_format.py
src/palje/cli_commands/: copy_cmd.py  delete_cmd.py  document_cmd.py  sort_cmd.py
src/palje/confluence/: confluence_models.py  confluence_ops.py  confluence_rest.py  confluence_rest_models.py  confluence_types.py  storage_format.py  utils.py  xml_handling.py
src/palje/gui/: gui.py
src/palje/gui/components/: confluence_connection_widget.py  db_browser_widget.py  db_server_widget.py
src/palje/mssql/: database_queries.ini  mssql_database.py
src/palje/queries/: database_queries.ini
test/: confluence_mock_api.py  conftest.py  fixtures.py  http_server.py  routes.py  test_confluence_client.py  test_confluence_rest.py  test_confluence_xml_parsing.py  test_mssql_database.py  test_palje.py  test_storage_format.py
test/database/: index.sql  models.py  procedure.sql
test/database/docs/db_objects/: columns.json  schemas.json  tables.json
