[project]
name = "palje"
description = "A tool for creating hierarchical documentation of SQL Server databases to Confluence wiki."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["palje"]
dynamic = ["version"]
dependencies = [
    "azure-identity ~= 1.14",
    "sqlalchemy[mssql] ~= 2.0.29",
    "aiohttp ~= 3.9"
]
requires-python = ">=3.11"
authors = [
  {name = "ALM Partners Oy"}
]
maintainers = [
  {name = "ALM Partners Oy"}
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: Documentation",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/ALMPartners/palje"

[project.optional-dependencies]
test = ["tox ~= 4.15", "pytest-aiohttp ~= 1.0"]
msibuild = ["cx_freeze ~= 7.0"]

[project.scripts]
palje = "palje.cli:main"
palje-gui = "palje.gui.gui:main"

[build-system]
requires = ["setuptools >= 61", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/palje/version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "./test"
]
