[metadata]
name = palje
description = A tool for creating hierarchical documentation of SQL Server databases to Confluence wiki.
keywords = palje
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ALMPartners/palje
author = ALM Partners Oy
author_email = salla.haverinen@almpartners.fi
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Topic :: Documentation
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
python_requires = >=3.6
package_dir=
    =src
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    pyodbc
    requests

[options.packages.find]
where=src
